--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -36,7 +36,7 @@
 }
 
 body {
-  background-color: var(--color-basic-bg);
+  background-color: var(--color-gray-200);
   font-family: 'SUIT Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', '맑은 고딕', 'Malgun Gothic', '고딕', 'Dotum', '돋움', sans-serif;
   -webkit-font-smoothing: antialiased;
