--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -33,6 +33,8 @@
   /* 베이직 컬러 */
   --color-basic-bg: #f7f7f7; /* 확인 필요 */
   --color-basic-red: red; /* 확인 필요 */
+
+  --color-border-color: #e5e7eb;
 }
 
 body {
@@ -40,6 +42,7 @@ body {
   font-family: 'SUIT Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', '맑은 고딕', 'Malgun Gothic', '고딕', 'Dotum', '돋움', sans-serif;
   font-size: 16px;
+  color: var(--color-gray-900);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -51,4 +54,8 @@ body {
   background-color: #fff;
   overflow-x: hidden;
   margin: 0 auto;
+}
+
+input {
+  border: 1px solid var(--color-border-color);
 }
