--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,15 +1,16 @@
 :root {
   /* 메인 컬러: 민트 */
   --color-main-primary: #4fd1c5;
-  --color-main-light-100: #a9ebd8;
-  --color-main-light-200: #d2e3fc; /* 확인 필요 */
-  --color-main-light-300: #cdf0ed;
+  --color-main-light-100: #8bebe2;
+  --color-main-light-200: #afeee8;
+  --color-main-light-300: #d2fffb;
+  --color-main-light-400: #edfffd;
   --color-main-dark: #25b7aa;
-  --color-main-deeper-dark: #4285f4; /* 확인 필요 */
+  --color-main-deeper-dark: #2b4d44;
 
   /* 서브 컬러: 보라 */
   --color-secondary-primary: #9494f8;
-  --color-secondary-100: #fdf5d4; /* 확인 필요 */
+  --color-secondary-100: #b1b1fa;
   --color-secondary-200: #cdcdfc;
   --color-secondary-300: #e7e7ff;
   --color-secondary-dark: #7777d5;
@@ -31,18 +32,25 @@
   --color-category-personal: #a855f7;
 
   /* 베이직 컬러 */
-  --color-basic-bg: #f7f7f7; /* 확인 필요 */
-  --color-basic-red: red; /* 확인 필요 */
+  --color-basic-bg: #f9f9f9;
+  --color-basic-red: #ff3333;
 
+  /* 선 */
   --color-border-color: #e5e7eb;
+
+  /* 폰트 */
+  --color-text-primary: var(--color-gray-900);
+  --color-text-on-color: #ffffff;
+  --color-text-muted: #b3b3b3;
+  --color-text-main: var(--color-main-primary);
 }
 
 body {
-  background-color: var(--color-gray-200);
   font-family: 'SUIT Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', '맑은 고딕', 'Malgun Gothic', '고딕', 'Dotum', '돋움', sans-serif;
   font-size: 16px;
-  color: var(--color-gray-900);
+  color: var(--color-text-primary);
+  background-color: var(--color-basic-bg);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -51,7 +59,7 @@ body {
   min-width: 350px;
   max-width: 450px;
   min-height: 100vh;
-  background-color: #fff;
+  background-color: white;
   overflow-x: hidden;
   margin: 0 auto;
 }
