--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -8,6 +8,7 @@
 *::after {
   box-sizing: border-box;
 }
+
 html,
 body,
 div,
@@ -97,7 +98,7 @@ button {
   font: inherit;
   vertical-align: baseline;
 }
-/* HTML5 display-role reset for older browsers */
+
 article,
 aside,
 details,
@@ -111,17 +112,21 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -129,14 +134,31 @@ q:after {
   content: '';
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 a,
 button {
   transition: 0.2s all ease-in-out;
 }
+
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+button {
+  cursor: pointer;
+  background: none;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+input {
+  font: inherit;
 }
