--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -43,12 +43,22 @@
   --color-text-on-color: #ffffff;
   --color-text-muted: #b3b3b3;
   --color-text-main: var(--color-main-primary);
+
+  /* 폰트 두께 */
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-semi-bold: 700;
+  --font-weight-bold: 700;
+
+  /* 사이즈 */
+  --size-layout-padding: 20px;
 }
 
 body {
   font-family: 'SUIT Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
     'Helvetica Neue', '맑은 고딕', 'Malgun Gothic', '고딕', 'Dotum', '돋움', sans-serif;
   font-size: 16px;
+  font-weight: var(--font-weight-regular);
   color: var(--color-text-primary);
   background-color: var(--color-basic-bg);
   -webkit-font-smoothing: antialiased;
@@ -57,10 +67,10 @@ body {
 
 input {
   border: 1px solid var(--color-border-color);
-  font-size: 1rem;
 }
 
 #wrapper {
+  width: 100%;
   min-width: 350px;
   max-width: 450px;
   min-height: 100vh;
@@ -70,6 +80,7 @@ input {
 }
 
 .page-inner {
-  width: calc(100% - 40px);
+  width: 100%;
   margin: 0 auto;
+  padding: 0 var(--size-layout-padding);
 }
