--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -69,7 +69,7 @@ input {
   border: 1px solid var(--color-border-color);
 }
 
-#wrapper {
+#wrap {
   width: 100%;
   min-width: 350px;
   max-width: 450px;
