✨[Feat] InputIcon 컴포넌트 추가

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -90,7 +90,8 @@ time,
 mark,
 audio,
 video,
-button {
+button,
+input {
   margin: 0;
   padding: 0;
   border: 0;
@@ -160,5 +161,9 @@ button:disabled {
 }
 
 input {
-  font: inherit;
+  height: inherit;
+}
+
+input:focus {
+  outline: none;
 }
