--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -65,10 +65,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-input {
-  border: 1px solid var(--color-border-color);
-}
-
 #wrap {
   width: 100%;
   min-width: 350px;
@@ -83,4 +79,8 @@ input {
   width: 100%;
   margin: 0 auto;
   padding: 0 var(--size-layout-padding);
+}
+
+input::placeholder {
+  color: var(--color-gray-300);
 }
