✨[Feat] 전역 reset 스타일과 스타일 변수 추가

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,5 @@
 :root {
-  /* 메인 컬러: 민트 */
+  /* 색상: 메인 컬러(민트) */
   --color-main-primary: #4fd1c5;
   --color-main-light-100: #a0e8e1;
   --color-main-light-200: #ace5e0;
@@ -8,14 +8,14 @@
   --color-main-dark: #25b7aa;
   --color-main-deeper-dark: #2b4d44;
 
-  /* 서브 컬러: 보라 */
+  /* 색상: 서브 컬러(보라) */
   --color-secondary-primary: #9494f8;
   --color-secondary-100: #b1b1fa;
   --color-secondary-200: #cdcdfc;
   --color-secondary-300: #e7e7ff;
   --color-secondary-dark: #7777d5;
 
-  /* 무채색 */
+  /* 색상: 무채색 계열 */
   --color-gray-100: #f5f5f5;
   --color-gray-200: #ededed;
   --color-gray-300: #cccccc;
@@ -26,7 +26,7 @@
   --color-gray-800: #444444;
   --color-gray-900: #333333;
 
-  /* 카테고리 컬러: 건강, 업무, 개인 */
+  /* 색상: 카테고리(건강, 업무, 개인) */
   --color-category-health: #22c55e;
   --color-category-work: #3b82f6;
   --color-category-personal: #a855f7;
@@ -35,27 +35,47 @@
   --color-category-bg-work: #dbeafe;
   --color-category-bg-personal: #f0e0ff;
 
-  /* 베이직 컬러 */
+  /* 색상: 베이직 */
   --color-basic-bg: #f9f9f9;
   --color-basic-red: #ff3333;
+  --color-basic-white: #fff;
 
-  /* 선 */
+  /* 색상: 선 */
   --color-border-color: #e5e7eb;
 
-  /* 폰트 */
+  /* 색상: 폰트 */
   --color-text-primary: var(--color-gray-900);
   --color-text-on-color: #ffffff;
   --color-text-muted: #b3b3b3;
   --color-text-main: var(--color-main-primary);
 
-  /* 폰트 두께 */
+  /* 폰트: 사이즈 */
+  --font-size-xs: 0.75rem; /* 12px */
+  --font-size-sm: 0.875rem; /* 14px */
+  --font-size-md: 1rem; /* 16px */
+  --font-size-lg: 1.625rem; /* 26px */
+
+  /* 폰트: 줄간격 */
+  --line-height-xs: 1rem; /* 16px */
+  --line-height-sm: 1.5rem; /* 24px */
+  --line-height-md: 1.625rem; /* 24px */
+  --line-height-lg: 2.25rem; /* 32px */
+
+  /* 폰트: 두께 */
   --font-weight-regular: 400;
   --font-weight-medium: 500;
-  --font-weight-semi-bold: 700;
+  --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
 
-  /* 사이즈 */
+  /* 사이즈: 여백 */
   --size-layout-padding: 20px;
+
+  /* 사이즈: 모서리 */
+  --size-border-radius-md: 8px;
+  --size-border-radius-lg: 12px;
+
+  /* 효과 */
+  --box-shadow-default: 0px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 body {
@@ -77,12 +97,6 @@ body {
   background-color: white;
   overflow-x: hidden;
   margin: 0 auto;
-}
-
-.page-inner {
-  width: 100%;
-  margin: 0 auto;
-  padding: 0 var(--size-layout-padding);
 }
 
 input::placeholder {
