--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -167,3 +167,16 @@ input {
 input:focus {
   outline: none;
 }
+
+legend {
+  display: table;
+}
+
+fieldset {
+  padding: 0.01em 0 0 0;
+  min-width: 0;
+}
+
+body:not(:-moz-handler-blocked) fieldset {
+  display: table-cell;
+}
