♻️[Refactor] UI 범위 밖 여백 배경색 변경

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -84,7 +84,7 @@ body {
   font-size: 16px;
   font-weight: var(--font-weight-regular);
   color: var(--color-text-primary);
-  background-color: var(--color-basic-bg);
+  background-color: var(--color-gray-900);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
