--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -76,6 +76,7 @@
 
   /* 효과 */
   --box-shadow-default: 0px 1px 5px rgba(0, 0, 0, 0.1);
+  --transition: 0.2s all ease-in-out;
 }
 
 body {
@@ -87,6 +88,11 @@ body {
   background-color: var(--color-gray-900);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+a,
+button {
+  transition: var(--transition);
 }
 
 input::placeholder {
