--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -14,6 +14,7 @@
   --color-secondary-200: #cdcdfc;
   --color-secondary-300: #e7e7ff;
   --color-secondary-400: #eae8fd;
+  --color-secondary-500: #f7f6ff;
   --color-secondary-dark: #7777d5;
 
   /* 색상: 무채색 */
@@ -82,8 +83,9 @@
   --line-height-xs: 1.375rem; /* 22px */
   --line-height-sm: 1.5rem; /* 24px */
   --line-height-md: 1.625rem; /* 26px */
-  --line-height-lg: 2.25rem; /* 36px */
-  --line-height-xl: 2.5rem; /* 40px */
+  --line-height-lg: 2rem; /* 32px */
+  --line-height-xl: 2.25rem; /* 36px */
+  --line-height-xxl: 2.5rem; /* 40px */
 
   /* 사이즈: 화면 */
   --view-min-width: 350px;
