--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -95,6 +95,7 @@
   /* 사이즈: 레이아웃 */
   --size-g-nav-height: 95px;
   --size-header-with-back: 80px;
+  --size-add-todo: 145px;
 
   /* 사이즈: 내부 여백 */
   --size-inner-padding: 24px;
@@ -144,7 +145,7 @@ body {
   font-weight: var(--font-weight-regular);
   color: var(--color-text-default);
   letter-spacing: -0.01rem;
-  background-color: var(--color-background-white);
+  background-color: var(--color-background-gray-light);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -168,4 +169,9 @@ input::placeholder {
 *:disabled {
   background-color: var(--color-gray-200) !important;
   color: var(--color-gray-400) !important;
+}
+
+::selection {
+  background-color: var(--color-secondary-primary);
+  color: var(--color-text-on-color);
 }
