✨[Feat] textarea, form CSS 초기화 추가

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -185,3 +185,13 @@ img {
   max-width: 100%;
   vertical-align: top;
 }
+
+textarea {
+  font: inherit;
+  color: inherit;
+  resize: none;
+}
+
+form {
+  width: 100%;
+}
