--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -165,7 +165,8 @@ input {
   background-color: var(--color-background-white);
 }
 
-input::placeholder {
+input::placeholder,
+textarea::placeholder {
   color: var(--color-gray-400);
 }
 
